@@ -1,4 +1,4 @@
-// set up junit 5 support for gradle
+
 buildscript {
     repositories {
         mavenCentral()
@@ -6,49 +6,201 @@ buildscript {
 }
 
 plugins {
+    id 'java'
+    id 'application'
     id 'org.ajoberstar.grgit' version '2.1.0'
-    id 'com.zyxist.chainsaw' version '0.1.3'
-    id 'com.github.johnrengelman.shadow' version '2.0.2'
+    id 'com.github.johnrengelman.shadow' version '4.0.4'
+    id 'de.jjohannes.extra-java-module-info' version '0.1'
+ 
+}
+
+application {
+    mainModule = 'gov.gsa.pivconformance.gui' // name defined in module-info.java
+    mainClass = 'org.gsa.pivconformance.gui.GuiRunnerApplication'
+}
+
+java {
+    modularity.inferModulePath.set(true)
 }
 
 apply plugin: 'java'
 apply plugin: 'application'
 apply plugin: 'com.github.johnrengelman.shadow'
-
-javaModule.name = 'gov.gsa.pivconformancetools'
+apply plugin: 'eclipse'
 
 repositories {
     jcenter()
     maven { url 'https://repository.apache.org/snapshots' }
+    flatDir {
+        dirs '../../libs'
+    }
+}
+
+def getVersion = { ->
+    File resourcesDir = new File(project.getProjectDir(), 'src/main/resources/')
+    File versionFile = new File(resourcesDir, 'build.version')
+    if(!versionFile.exists()) {
+        resourcesDir.mkdirs()
+        versionFile.createNewFile()
+        println 'Initializing build.version file...'
+        versionFile.text = '0.0-changeme'
+    }
+    String version = versionFile.text.replaceAll("[\\n\\r\\t ]", "")
 }
 
 dependencies {
-    compile 'org.bouncycastle:bcprov-jdk15on:1.59+'
-    compile 'org.bouncycastle:bcpkix-jdk15on:1.59+'
-    compile 'commons-cli:commons-cli:1.4'
-    compile 'commons-codec:commons-codec:1.11'
-    compile 'com.payneteasy:ber-tlv:1.0-8'
-    compile 'org.slf4j:slf4j-api:1.8+'
-    compile 'ch.qos.logback:logback-classic:1.3+'
-    compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.21.0.1'
-    compile project(':cardlib')
-    compile project(':conformancelib')
-    compile 'org.junit.jupiter:junit-jupiter-api:5.1.0'
-    compile 'org.junit.jupiter:junit-jupiter-params:5.1.0'
-    compile 'org.junit.platform:junit-platform-launcher:1.0.0'
-    runtime 'org.junit.jupiter:junit-jupiter-engine:5.1.0'
-    runtime 'org.junit.jupiter:junit-jupiter-params:5.1.0'
+    implementation 'org.bouncycastle:bcprov-jdk15on:1.66'
+    implementation 'org.bouncycastle:bcpkix-jdk15on:1.66'
+    implementation 'commons-cli:commons-cli:1.4'
+    implementation 'commons-codec:commons-codec:1.15'
+    implementation 'commons-csv:commons-csv:1.8'
+    implementation 'com.payneteasy:ber-tlv:1.0-8'
+    implementation 'org.slf4j:slf4j-api:2.0.0-alpha1'
+    implementation 'ch.qos.logback:logback-classic:1.3.0-alpha5'
+    implementation 'ch.qos.logback:logback-core:1.3.0-alpha5'
+    implementation 'com.jgoodies:jgoodies-common:1.4.0'
+    implementation 'com.jgoodies:jgoodies-forms:1.6.0'
+    implementation 'gov.gsa.pivconformance.cardlib:gov.gsa.pivconformance.cardlib:0.2.1-beta'
+    implementation 'gov.gsa.pivconformance.conformancelib:gov.gsa.pivconformance.conformancelib:0.2.1-beta'
+    implementation 'junit:junit:4.13'
+    implementation 'org.junit.jupiter:junit-jupiter-api:5.1.0'
+    implementation 'org.junit.jupiter:junit-jupiter-params:5.1.0'
+    implementation 'org.junit.platform:junit-platform-launcher:1.0.0'
+    implementation 'org.junit.jupiter:junit-jupiter-engine:5.1.0'
+    implementation 'org.junit.jupiter:junit-jupiter-params:5.1.0'
 
-    shadow 'org.bouncycastle:bcprov-jdk15on:1.59'
+    shadow 'org.bouncycastle:bcprov-jdk15on:1.66'
+    shadow 'org.bouncycastle:bcprov-jdk15on:1.66'
+    shadow 'commons-cli:commons-cli:1.4'
+    shadow 'commons-codec:commons-codec:1.15'
+    shadow 'commons-csv:commons-csv:1.8'
+    shadow 'com.payneteasy:ber-tlv:1.0-8'
+    shadow 'org.slf4j:slf4j-api:2.0.0-alpha1'
+    shadow 'ch.qos.logback:logback-classic:1.3.0-alpha5'
+    shadow 'ch.qos.logback:logback-core:1.3.0-alpha5'
+    shadow 'com.jgoodies:jgoodies-common:1.4.0'
+    shadow 'com.jgoodies:jgoodies-forms:1.6.0'
+    shadow 'gov.gsa.pivconformance.cardlib:gov.gsa.pivconformance.cardlib:0.2.1-beta'
+    shadow 'gov.gsa.pivconformance.conformancelib:gov.gsa.pivconformance.conformancelib:0.2.1-beta'
+    shadow 'junit:junit:4.13'
+    shadow 'org.junit.jupiter:junit-jupiter-api:5.1.0'
+    shadow 'org.junit.jupiter:junit-jupiter-params:5.1.0'
+    shadow 'org.junit.platform:junit-platform-launcher:1.0.0'
+    shadow 'org.junit.jupiter:junit-jupiter-engine:5.1.0'
+    shadow 'org.junit.jupiter:junit-jupiter-params:5.1.0'
+}
+//--add-exports org.junit.platform.commons/org.junit.platform.commons.util=gov.gsa.pivconformance.conformancelib
+extraJavaModuleInfo {
 
+    module("bcprov-jdk15on-1.66.jar", "org.bouncycastle", "1.66") {
+        exports("bcprov.ext-jdk15on")
+    }
+    module("bcpkix-jdk15on-1.66.jar", "org.bouncycastle", "1.66") {
+        exports("bcpkix.jdk15on")
+    }
+    module("ber-tlv-1.0-8.jar", "com.payneteasy", "1.08") {
+        exports("ber.tlv")
+    }
+    module("hamcrest-core-1.3.jar", "org.hamcrest", "1.3") {
+        exports("hamcrest.core")
+    }
+    module("slf4j-api-2.0.0-alpha1.jar", "org.slf4j", "1.4") {
+        exports("slf4j.api")
+    }
+    module("sqlite-jdbc-3.32.3.2.jar", "org.xerial.sqlite", "3.32.3.2") {
+        exports("org.sqlite")
+    }
+    module("junit-4.11.jar", "org.junit.jupiter", "4.11") {
+        exports("org.junit")
+        exports("org.junit.runner")
+        exports("org.junit.internal")
+    }
+    module("junit-platform-launcher-5.7.0.jar", "org.junit.platform", "5.7.0") {
+        exports("org.junit.platform.launcher")
+    }
+    module("junit-platform-commons-5.7.0.jar", "org.junit.platform.commons", "5.7.0") {
+        exports("org.junit.platform.commons")
+    }
+    module("activation-1.1.jar", "javax.activation", "1.1") {
+        exports("activation")
+    }
+    module("checker-framework-1.7.0.jar", "edu.washington.cs.types.checker", "1.7.0") {
+        exports("checker.framework")
+    }
+    module("commons-cli-1.4.jar", "org.apache.commons.cli", "1.4") {
+        exports("org.apache.commons.cli")
+    }    
+    module("commons-csv-1.8.jar", "org.apache.commons.csv", "1.8") {
+        exports("org.apache.commons.csv")
+        exports("commons.csv")
+    }
+     module("commons-codec-1.13.jar", "org.apache.commons.codec", "1.15") {
+        exports("org.apache.commons.codec")
+        exports("org.apache.commons.codec.binary")
+    }   
+    module("logback-classic-1.3.0-alpha5.jar", "ch.qos.logback", "1.3.0-alpha5") {
+        exports("logback.classic")
+    }
+    module("logback-core-1.3.0-alpha5.jar", "ch.qos.logback", "1.3.0-alpha5") {
+        exports("logback.core")
+        exports("logback.core.rolling")
+    }
+    module("jgoodies-common-1.4.0", "com.jgoodies", "1.4.0") {
+        exports("common")
+    }
+    module("jgoodies-forms-1.6.0", "com.jgoodies", "1.6.0") {
+        exports("forms")
+    }
+
+
+    automaticModule("ibatis-core-3.0.jar", "org.apache.ibatis")
+    automaticModule("jgoodies-forms-1.6.0.jar", "com.jgoodies.forms")
+    automaticModule("jgoodies-common-1.4.0.jar", "com.jgoodies.common")
+}
+
+sourceSets {
+    main {
+        java {
+            if(targetCompatibility != JavaVersion.VERSION_11)
+                exclude '**/module-info.java'
+        }
+    }
+}
+
+import org.gradle.plugins.ide.eclipse.model.AccessRule
+
+eclipse {
+    classpath {
+        file {
+            whenMerged {
+                def jre = entries.find { it.path.contains 'org.eclipse.jdt.launching.JRE_CONTAINER' }
+                jre.accessRules.add(new AccessRule('0', 'javax/smartcardio/**'))
+
+                //def cardlib = entries.find { it.path.contains 'cardlib' }
+                //cardlib.sourcePath = fileReference(file('../../libs/' + 'gov.gsa.pivconformance.cardlib' + '-' + getVersion() + '.jar'))
+                //def conformancelib = entries.find { it.path.contains 'fips' }
+                //conformancelib.sourcePath = fileReference(file('../../libs/gov.gsa.pivconformance.cardlib' + '-' + getVersion() + '.jar'))
+            }
+        }
+    }
+}
+
+shadowJar {
+    classifier = ''
 }
 
 // Define the main class for the application jar that will be produced
-mainClassName = 'gov.gsa.pivconformancetools.DumpDiagnosticInfo'
+mainClassName = 'gov.gsa.pivconformance.gui.GuiRunnerApplication'
 
 jar {
+    version = getVersion()
+    dependsOn(shadowJar { classifier = null })
     manifest {
         attributes 'Main-Class': mainClassName
+    }
+    doLast {
+        println 'archiveName: ' + archiveName
+        configurations.runtime.each { println it }
     }
 }
 
@@ -66,32 +218,38 @@ test {
     }
 }
 
+compileJava {
+    options.debugOptions.debugLevel = "source,lines,vars"
+}
 
-// when producing a jar that is suitable for distribution using the shadow plugin,
-// this will enbed a version properties file.
-/*
-compileJava.doFirst {
-        //options.compilerArgs = ['--add-modules', 'java.smartcardio']
-        def git = org.ajoberstar.grgit.Grgit.open(dir: '.')
-        def commit = git.head()
+task sourceJar(type: Jar, dependsOn: classes) {
+    classifier 'sources'
+    from sourceSets.main.allSource
+}
 
-        def commitId = commit.abbreviatedId
-        def commitDate = commit.getDate()
-        def buildDate = new Date()
+task copyShadowLibs(type: Copy) {
+    from configurations.shadow
+    into '../../libs'
+}
 
-        File resourcesDir = new File(project.getProjectDir(), 'src/main/resources/gov/gsa/pivconformance/utils')
-        File propertiesFile = new File(resourcesDir, 'version.properties')
+shadowJar.dependsOn copyShadowLibs
 
-        // The project may not have any resources, so create the directories and file
-        if(!propertiesFile.exists()) {
-            resourcesDir.mkdirs()
-            propertiesFile.createNewFile()
-        }
-        Properties versionProperties = new Properties()
-        versionProperties.setProperty('git.commit.time', commitDate.format('dd.MM.yy HH.mm.ss'))
-        versionProperties.setProperty('build.time', buildDate.format('dd.MM.yy HH.mm.ss'))
-        versionProperties.setProperty('git.commit.id', commitId)
-        versionProperties.setProperty('build.version', version)
-        versionProperties.store(propertiesFile.newWriter(), null)
-}*/
+shadowJar.doFirst {
+    archiveName = 'gov.gsa.pivconformance.gui' + '-' + getVersion() + '-shadow.jar' 
+    println 'shadowJar.doFirst.archveName: ' + archiveName
+}
 
+task installSource(type: Copy) {
+    version = getVersion()
+    dependsOn copyShadowLibs
+    dependsOn sourceJar
+    from sourceJar
+    into '../../libs' 
+}
+
+task install(type: Copy) {
+    version = getVersion()
+    dependsOn jar
+    from shadowJar
+    into '../../libs' 
+}
